[package]
name = "gen_vrf"
version = "0.1.0"
edition = "2021"

[dependencies]
# alloy = { version = "0.12", features = ["full"] }
alloy = { git = "https://github.com/alloy-rs/alloy", features = [
    "providers",
    "node-bindings",
] }
tokio = { version = "1.44.1", features = ["full"] }
clap = { version = "4.5.32", features = ["derive"] }
dotenv = "0.15.0"
hex = "=0.3.2"
rand = "0.9.0"
serde_json = "1.0.140"
vrf = { git = "https://github.com/nomad-lw/vrf-rs.git", branch = "master" }
eyre = "0.6.12"
tracing = "0.1.41"
color-eyre = "0.6.3"
tracing-subscriber = "0.3.19"
thiserror = "2.0.12"
contract-bindings = { path = "./crates/bindings" }
